Used LinkedList.